# Financial-Calculator

./: .gitignore  App.tsx  COMPREHENSIVE_SOLUTION.md  DATA_CAPTURE_FIX_REPORT.md  DESKTOP_APP_STATUS.md  FILE_INTERCONNECTIONS.md  FINAL_COMPLETION_REPORT.md  HOW_TO_START.md  HYBRID_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_VERIFICATION.md  MODULE_INTERLINKING_REPORT.md  NO_DATA_DIAGNOSIS.md  OPTIMIZATION_README.md  OPTIMIZED_SOLUTION.md  PICKLE_ERROR_FIX.md  PICKLE_ERROR_QUICK_FIX.md  QUALITY_ENHANCEMENTS.md  README.md  api-server.spec  debug_out.txt  extracted_data.db  final_patch.py  index.css  index.html  launch-desktop.sh  metadata.json  normalize_keywords.py  normalize_keywords_ast.py  normalize_keywords_conservative.py  package-lock.json  package.json  patch_api.py  patch_api_clean.py  rag_engine.py  start.sh  tailwind.config.js  terminology_keywords.py  test_api.py  test_financial.txt  (+5 more)
components/: CapturedDataGrid.tsx  CompanySearchModal.tsx  DataTable.tsx  DocumentViewer.tsx  GlassLoadingOverlay.tsx  Header.tsx  IndASStatusIndicator.tsx  KnowledgeBaseModal.tsx  MetricsDashboard.tsx  SettingsModal.tsx  Sidebar.tsx  UploadModal.tsx
project_reports/: .gitignore  APP_ARCHITECTURE_MAP.md  DOCLING_PARSER_SUMMARY.md  IND_AS_COMPLETE_SUMMARY.md  IND_AS_FINAL_SUMMARY.md  IND_AS_IMPLEMENTATION_SUMMARY.md  METRICS_INTEGRATION.md  (+8 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main_capabilities.json
src-tauri/python/: ollama_service.py
src-tauri/src/: main.rs  ollama.rs  python_bridge.rs  settings.rs
(+118 files in other folders)
