[package]
name = "financial-calculator"
version = "0.1.0"
description = "Financial Calculator Desktop App"
authors = ["Vishal Bhavsar"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
futures-util = "0.3"
tauri-plugin-log = "2.8.0"
